--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,27 +1,34 @@
-<h1>New Post</h1>
-<!-- Comments Form -->
-<div class="card my-4">
-  <h5 class="card-header">Leave a Comment:</h5>
-  <div class="card-body">
-    <form>
-      <div class="form-group">
-        <textarea class="form-control" rows="3">
-          <%= form_for :post, url: posts_path do |f| %>
-            <p>
-              <%= f.label :title %><br>
-              <%= f.text_field :title %>
-            </p>
-            <p>
-             <%= f.label :body %><br>
-             <%= f.text_area :body %>
-            </p>
 
-         <% end %>
 
-        </textarea>
-      </div>
-      <div class="action">
-        <%= f.submit %>
-      </div>
+
+<div class="container">
+
+  <div class="row">
+    <div class="col-md-8" >
+      <h1>New Post</h1>
+
+       <%= form_for :post, url: posts_path do |f| %>
+         <div class="form-group new-post-title">
+           <%= f.label :title %>
+         </div>
+
+        <div class="form-group new-post-name">
+           <%= f.text_field :title, autofocus: true, class: "form-control" %>
+        </div>
+
+
+         <div class="form-group">
+            <%= f.label :body %>
+         </div>
+         <div class="form-group">
+            <%= f.text_area :body, autofocus: true, class: "form-control" %>
+          </div>
+           <div class="actions">
+            <%= f.submit "Save post", class: "btn btn-primary" %>
+          </div>
+
+      <% end %>
+
+    </div>
   </div>
 </div>
