--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,7 +1,21 @@
-<% @posts.each do |post| %>
- <div class="post_wrapper">
-   <h2 class="title"><%= link_to post.title, post %></h2>
-   <p class="date"><%= post.created_at.strftime("%B, %d, %Y") %></p>
 
- </div>
-<% end %>
+
+<table class="table table-hover col-lg-6">
+
+         <thead>
+            <tr>
+              <th scope="col">Topic</th>
+              <th scope="col">Time</th>
+            </tr>
+         </thead>
+      <% @posts.each do |post, num| %>
+         <tbody>
+           <tr>
+
+
+             <td scope="row"><%= link_to post.title, post %></td>
+             <td scope="row"><%= post.created_at.strftime("%B, %d, %Y") %></td>
+            </tr>
+          </tbody>
+    <% end %>
+  </table>
