--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -6,7 +6,6 @@
   <div class="row">
     <div class="col-md-8" >
       <h1>New Post</h1>
-
        <%= form_for :post, url: posts_path do |f| %>
          <div class="form-group new-post-title">
            <%= f.label :title %>
@@ -28,7 +27,13 @@
           </div>
 
       <% end %>
-
     </div>
+    <div class="col-md-4" >
+      <div class="container">
+        <h1> Side bar </h1>
+
+      </div>
+    </div>
+
   </div>
 </div>
