--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -7,6 +7,20 @@
     <div class="col-md-8" >
       <h1>New Post</h1>
        <%= form_for :post, url: posts_path do |f| %>
+         <% if @post.errors.any? %>
+          <div id="errors">
+             <h2><% pluralize(@post.errors.count, "error") %>
+               prevented this post from saving
+             </h2>
+
+          <ul>
+            <% @post.errors.full_messages.each do |msg| %>
+              <li><% msg %></li>
+            <% end %>
+          </ul>
+        </div>
+      <% end%>
+
          <div class="form-group new-post-title">
            <%= f.label :title %>
          </div>
@@ -30,7 +44,22 @@
     </div>
     <div class="col-md-4" >
       <div class="container">
-        <h1> Side bar </h1>
+        <div class="card" style="width: 18rem;">
+
+  <div class="card-body">
+    <h5 class="card-title">Quick menu</h5>
+    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+  </div>
+  <ul class="list-group list-group-flush">
+    <li class="list-group-item">Cras justo odio</li>
+    <li class="list-group-item">Dapibus ac facilisis in</li>
+    <li class="list-group-item">Vestibulum at eros</li>
+  </ul>
+  <div class="card-body">
+    <a href="#" class="card-link">Card link</a>
+    <a href="#" class="card-link">Another link</a>
+  </div>
+</div>
 
       </div>
     </div>
